; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_shader.c_free_constant_table.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/d3dx9_36/extr_shader.c_free_constant_table.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ID3DXConstantTableImpl = type { i32*, i32*, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ID3DXConstantTableImpl*)* @free_constant_table to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_constant_table(%struct.ID3DXConstantTableImpl* %0) #0 {
  %2 = alloca %struct.ID3DXConstantTableImpl*, align 8
  %3 = alloca i64, align 8
  store %struct.ID3DXConstantTableImpl* %0, %struct.ID3DXConstantTableImpl** %2, align 8
  %4 = load %struct.ID3DXConstantTableImpl*, %struct.ID3DXConstantTableImpl** %2, align 8
  %5 = getelementptr inbounds %struct.ID3DXConstantTableImpl, %struct.ID3DXConstantTableImpl* %4, i32 0, i32 1
  %6 = load i32*, i32** %5, align 8
  %7 = icmp ne i32* %6, null
  br i1 %7, label %8, label %32

8:                                                ; preds = %1
  store i64 0, i64* %3, align 8
  br label %9

9:                                                ; preds = %23, %8
  %10 = load i64, i64* %3, align 8
  %11 = load %struct.ID3DXConstantTableImpl*, %struct.ID3DXConstantTableImpl** %2, align 8
  %12 = getelementptr inbounds %struct.ID3DXConstantTableImpl, %struct.ID3DXConstantTableImpl* %11, i32 0, i32 2
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = icmp ult i64 %10, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %9
  %17 = load %struct.ID3DXConstantTableImpl*, %struct.ID3DXConstantTableImpl** %2, align 8
  %18 = getelementptr inbounds %struct.ID3DXConstantTableImpl, %struct.ID3DXConstantTableImpl* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = load i64, i64* %3, align 8
  %21 = getelementptr inbounds i32, i32* %19, i64 %20
  %22 = call i32 @free_constant(i32* %21)
  br label %23

23:                                               ; preds = %16
  %24 = load i64, i64* %3, align 8
  %25 = add i64 %24, 1
  store i64 %25, i64* %3, align 8
  br label %9

26:                                               ; preds = %9
  %27 = call i32 (...) @GetProcessHeap()
  %28 = load %struct.ID3DXConstantTableImpl*, %struct.ID3DXConstantTableImpl** %2, align 8
  %29 = getelementptr inbounds %struct.ID3DXConstantTableImpl, %struct.ID3DXConstantTableImpl* %28, i32 0, i32 1
  %30 = load i32*, i32** %29, align 8
  %31 = call i32 @HeapFree(i32 %27, i32 0, i32* %30)
  br label %32

32:                                               ; preds = %26, %1
  %33 = call i32 (...) @GetProcessHeap()
  %34 = load %struct.ID3DXConstantTableImpl*, %struct.ID3DXConstantTableImpl** %2, align 8
  %35 = getelementptr inbounds %struct.ID3DXConstantTableImpl, %struct.ID3DXConstantTableImpl* %34, i32 0, i32 0
  %36 = load i32*, i32** %35, align 8
  %37 = call i32 @HeapFree(i32 %33, i32 0, i32* %36)
  ret void
}

declare dso_local i32 @free_constant(i32*) #1

declare dso_local i32 @HeapFree(i32, i32, i32*) #1

declare dso_local i32 @GetProcessHeap(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
